fix(material/datepicker): correctly render calendar arrow in high contrast mode (#23057)
Fixes that the calendar arrow was rendering as a rectangle in high contrast mode.

--- a/src/material/datepicker/_datepicker-theme.scss
+++ b/src/material/datepicker/_datepicker-theme.scss
@@ -67,7 +67,7 @@ $calendar-weekday-table-font-size: 11px !default;
   $disabled-color: theming.get-color-from-palette($foreground, disabled-text);
 
   .mat-calendar-arrow {
-    border-top-color: theming.get-color-from-palette($foreground, icon);
+    fill: theming.get-color-from-palette($foreground, icon);
   }
 
   // The prev/next buttons need a bit more specificity to
